<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Contraseña:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/passwordRegistro"
        android:layout_width="265dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/campo_de_texto"
        android:ems="10"
        android:hint="MyContraseña812"
        android:inputType="text"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/emailRegistro"
        app:layout_constraintVertical_bias="0.209"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/passwordRegistro2"
        android:layout_width="265dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/campo_de_texto"
        android:ems="10"
        android:hint="MyContraseña812"
        android:inputType="text"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/emailRegistro"
        app:layout_constraintVertical_bias="0.437"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="105dp"
        android:layout_height="57dp"
        android:layout_marginTop="68dp"
        android:text="Repetir contraseña:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/nombreRegistro"
        android:layout_width="265dp"
        android:layout_height="39dp"
        android:background="@drawable/campo_de_texto"
        android:ems="10"
        android:hint="Manuel"
        android:inputType="text"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/emailRegistro"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="0dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/telefonoRegistro"
        app:layout_constraintVertical_bias="0.049"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="mskadmsaodkmsapdmsapdkamdpskmda" />

    <EditText
        android:id="@+id/telefonoRegistro"
        android:layout_width="265dp"
        android:layout_height="39dp"
        android:background="@drawable/campo_de_texto"
        android:ems="10"
        android:hint="1515651651"
        android:inputType="number"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/apellidoRegistro"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/apellidoRegistro"
        android:layout_width="265dp"
        android:layout_height="39dp"
        android:background="@drawable/campo_de_texto"
        android:ems="10"
        android:hint="López"
        android:inputType="text"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/nombreRegistro"
        app:layout_constraintVertical_bias="0.057"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edadRegistro"
        android:layout_width="265dp"
        android:layout_height="39dp"
        android:layout_marginTop="429dp"
        android:layout_marginBottom="134dp"
        android:background="@drawable/campo_de_texto"
        android:ems="10"
        android:hint="Calle ....."
        android:inputType="text"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toTopOf="@+id/errorTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/fotoDeUsuario"
        android:layout_width="88dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        tools:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/boton_cambiar_imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cambiar Imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoDeUsuario"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre:"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_cambiar_imagen"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apellido:"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teléfono:"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="Email:"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dirección:"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        android:onClick="modificar"
        android:text="MODIFICAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegistro" />

    <TextView
        android:id="@+id/errorTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passwordRegistro2"
        app:layout_constraintTop_toBottomOf="@+id/edadRegistro"
        tools:text="TextView" />
</androidx.constraintlayout.widget.ConstraintLayout>